css/style.sass
// @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700")

$white: #f3f3f3
$yellow: #ffc945
$red: #f34653
$lightGrey: rgba(black, 0.1)
$grey: #b5b5b5
$mediumGrey: #808080
$darkGrey: #636161
$black: #444
$linkBg: #E7E7E7

@mixin size($width, $height:$width)
  width: $width
  height: $height

@mixin flexCenter
  display: flex
  justify-content: center
  align-items: center

@mixin flexLeft
  display: flex
  justify-content: start
  align-items: center

*, *:before, *:after
  margin: 0
  padding: 0
  font-family: 'Roboto Condensed','微軟正黑體', sans-serif
  letter-spacing: 0.5px
  cursor: default
  user-select: none
  outline: none
  appearance: none

html, body
  margin: 0
  +size(100%)
body
  +flexCenter
  background-color: $yellow

::-webkit-scrollbar
  width: 0
// ::-webkit-scrollbar
//   width: 6px
// ::-webkit-scrollbar-track
//   background-color: $yellow
// ::-webkit-scrollbar-thumb
//   background-color: $black

::selection
  background-color: $lightGrey

.todo-list
  border: 4px solid $black
  background-color: $white
  box-shadow: 0px 0px 20px rgba(0,0,0,0.3) // X, Y, spread, spread-radius, color
  
.title-block
  margin: 0
  padding: 26px 24px
  width: 340px
  +flexCenter
  background-color: $red
  border-bottom: 4px solid $black
  h1
    margin: 0
    +flexLeft
    color: $white
    border-bottom: 1.5px solid transparent
  
.wrapper
  padding: 30px 14px

.item // [id^="item_"]
  display: flex
  margin-bottom: 11px
  &:hover
    .handle, .delete
      opacity: 1
      transition: 0.2s
  &:active
    .handle
      opacity: 0
    .content
      border-color: transparent
    .delete
      opacity: 0

.handle
  margin-right: 8px
  padding-top: 2.2px
  padding-bottom: 4.8px
  font-size: 18px
  color: $mediumGrey
  opacity: 0
  cursor: move

input[type="checkbox"]
  margin: 0
  margin-top: 6px
  border: 2px solid $mediumGrey
  +size(16px)
  border-radius: 2px
  cursor: pointer
  &:checked
    border-color: $grey
    ~ .check
      opacity: 1
    ~ .content, ~ .content a
      color: $grey
      text-decoration: line-through
      transition: 0.2s
      &:focus
        border-color: $grey

.check
  margin-right: -18px
  position: relative
  top: -1px
  left: -15px
  font-size: 22px
  color: $grey
  opacity: 0
  pointer-events: none
  
.content
  margin-left: 8px
  padding: 1.5px
  display: inline
  word-wrap: break-word
  width: 277px
  font-size: 18px
  line-height: 1.45
  color: $black
  caret-color: $black
  border-bottom: solid 0.5px transparent
  cursor: text
  &:focus
    border-color: $mediumGrey

a
  padding: 3px 4px
  font-size: 0.95em
  color: $black
  background-color: $linkBg
  text-decoration-line: none
  cursor: pointer
  
.delete
  margin-left: 8px
  padding: 0 7.4px
  padding-top: 5.8px
  font-size: 15px
  color: $mediumGrey
  opacity: 0
  cursor: pointer

.new-item
  padding-left: 20.5px
  +flexLeft
  font-size: 20px
  color: $mediumGrey
  input
    margin-left: 4px
    padding: 4px
    padding-left: 2px
    width: 274px
    font-size: 17px
    color: $mediumGrey
    caret-color: $mediumGrey
    background-color: transparent
    border: none
    border-bottom: solid 1px $lightGrey
    cursor: text
    transition: 0.2s
    &:focus
      border-color: $grey
  ::-webkit-input-placeholder
    color: $grey

.dragging
  margin: 0 auto
  margin-top: -2px
  margin-bottom: 9px
  width: 320px
  border: 2px dashed grey
  border-radius: 5px
  .handle, input[type="checkbox"], .check, .content
    color: transparent
    opacity: 0

@media screen and (min-width: 1281px)
  .todo-list
    transform: scale(1.25)

